Fix spacing

--- a/src/styles/modules/pagination.css
+++ b/src/styles/modules/pagination.css
@@ -4,7 +4,7 @@
 
 .pagination {
   & a {
-    padding: calc(var(--spacing) / 3) var(--spacing);
+    padding: calc(var(--spacing) / 3) calc(var(--spacing) / 2);
     border-radius: --var(base-border-radius);
     color: --var(dark-gray);
     font-weight: var(--font-semi-bold);
